--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -569,6 +569,7 @@ footer h3,
     }
     .mdc-list-item--header {
       height: auto;
+      padding: 0;
     }
     .mdc-layout-grid {
       width: 100%;
@@ -2101,6 +2102,9 @@ footer,
   }
   .mdc-list-item {
     height: auto;
+  }
+  .browse-title-regions {
+    margin-top: 24px;
   }
 }
 .home-browse {
