--- a/sites/configurations/goodmoves/partials/browse.hbs
+++ b/sites/configurations/goodmoves/partials/browse.hbs
@@ -1,7 +1,7 @@
 <div class="mdc-layout-grid home-jobs">
   <div class="mdc-layout-grid__inner">
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone content page-content">
-      <div class="browse-title mdc-typography--headline5">
+      <div class="browse-title browse-title-roles mdc-typography--headline5">
         Roles
       </div>
       <ul class="mdc-list">
@@ -22,7 +22,7 @@
       </ul>
     </div>
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone content page-content">
-      <div class="browse-title mdc-typography--headline5">
+      <div class="browse-title browse-title-sectors mdc-typography--headline5">
         Sectors
       </div>
       <ul class="mdc-list">
@@ -43,7 +43,7 @@
       </ul>
     </div>
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone content page-content">
-      <div class="browse-title mdc-typography--headline5">
+      <div class="browse-title browse-title-working-patterns mdc-typography--headline5">
         Working patterns
       </div>
       <ul class="mdc-list">
@@ -63,7 +63,7 @@
         {{/each ~}}
       </ul>
 
-      <div class="browse-title mdc-typography--headline5">
+      <div class="browse-title browse-title-regions mdc-typography--headline5">
         Regions
       </div>
       <ul class="mdc-list">
