--- a/sites/configurations/goodmoves/partials/currently-recruiting.hbs
+++ b/sites/configurations/goodmoves/partials/currently-recruiting.hbs
@@ -1,12 +1,12 @@
 {{#compare @root.data.supplimentaryResponses.currently_recruiting.hits.total ">" 0 ~}}
 <section class="currently-recruiting mdc-elevation--z3">
-  <div class="mdc-typography--headline5 v-margin-full">
+  <div class="mdc-typography--headline5 home-heading v-margin-full">
     Currently recruiting&ensp;
     <span class="mdc-typography--body1">
       <a href="/organisations">See all</a>
     </span>
   </div>
-  <div class="mdc-layout-grid v-margin-full">
+  <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner">
       {{#each @root.data.supplimentaryResponses.currently_recruiting.hits.hits ~}}
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-2-phone">
