Browse button on home page

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -380,6 +380,9 @@ footer h3,
 }
 .mdc-button--large {
   height: 56px;
+  .far {
+    font-size: 1.25rem;
+  }
 }
 .drawer-container-permanent {
   display: flex;
@@ -2111,6 +2114,22 @@ footer,
   .mdc-layout-grid__inner {
     grid-gap: $unit*4;
   }
+  .mdc-button {
+    padding-right: 38px;
+    margin: .5rem .75rem .6rem 0;
+    .mdc-icon-toggle {
+      color: white;
+      position: absolute;
+      height: 36px;
+      width: 36px;
+      right: 0;
+      top: 0;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+  }
 }
 
 .home-heading {
@@ -2151,7 +2170,7 @@ footer,
   .mdc-drawer__content-heading {
     padding: 0 $unit;
     .mdc-icon-toggle {
-      display: inline-block;
+      // display: inline-block;
       margin: 0;
       vertical-align: middle;
       .far {
