--- a/sites/configurations/goodmoves/templates/pages/home.hbs
+++ b/sites/configurations/goodmoves/templates/pages/home.hbs
@@ -95,9 +95,11 @@
 
   <div class="home-browse h-padding">
     <h3 class="mdc-drawer__content-heading cursor-pointer h-padding-full" data-collapse-target="#home-browse-collapse" role="button" aria-pressed="false" aria-label="Show browse section" tabindex="0">
-      Browse
-      <span class="mdc-icon-toggle">
-        <span class="far fa-chevron-down" aria-hidden="true"></span>
+      <span class="mdc-button mdc-button--raised">
+        Browse
+        <span class="mdc-icon-toggle">
+          <span class="far fa-chevron-down" aria-hidden="true"></span>
+        </span>
       </span>
       <span class="mdc-typography--body2">
         By role, sector, working pattern, or region
