--- a/assets/css/fundingscotland-styles.scss
+++ b/assets/css/fundingscotland-styles.scss
@@ -1,10 +1,10 @@
-$mdc-theme-primary: #88B84A;
-$mdc-theme-primary-light: #B3D5F4;
-$mdc-theme-primary-dark: #5FA43D;
+$mdc-theme-primary: #198678;
+$mdc-theme-primary-light: #6CC439;
+$mdc-theme-primary-dark: #2F5348;
 
-$mdc-theme-complimentary: #f8ecdb;
-$mdc-theme-complimentary-light: #fefde7;
-$mdc-theme-complimentary-dark: #f6e5e1;
+$mdc-theme-complimentary: #ecf2e9;
+$mdc-theme-complimentary-light: #c6dabf;
+$mdc-theme-complimentary-dark: #d9e6d4;
 
 $mdc-theme-secondary: #E0E0E0; // Gray 300
 $mdc-theme-secondary-light: #F5F5F5; // Gray 100
@@ -23,6 +23,7 @@ $base-font-weight:                  400;
 
 $heading-font-family:               "Montserrat", Helvetica, Arial, sans-serif;
 $heading-font-weight:               700;
+$heading-medium-font-weight:        600;
 $heading-light-font-weight:         500;
 
 $footer-font-family:                "Open Sans", Helvetica, Arial, sans-serif;
@@ -39,7 +40,7 @@ $desktop-landscape-breakpoint: 1280px;
 
 @import "./node_modules/material-components-web/material-components-web.scss";
 @import url('//cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css');
-@import url('//fonts.googleapis.com/css?family=Montserrat:500,700|Open+Sans:400,500,600');
+@import url('//fonts.googleapis.com/css?family=Montserrat:500,600,700|Open+Sans:400,500,600');
 
 body {
   background-color: $mdc-theme-footer-dark;
@@ -63,9 +64,9 @@ h3,
 h4 {
   margin-bottom: $unit/2;
   font-family: $heading-font-family, $base-font-family, Helvetica, Arial, sans-serif;
-  font-weight: $base-font-weight;
+  font-weight: $heading-font-weight;
   strong {
-    font-weight: 700;
+    font-weight: $heading-font-weight;
   }
 }
 .headroom {
@@ -143,7 +144,7 @@ header {
       height: $header-lower-height;
     }
     .mdc-top-app-bar__lower .mdc-top-app-bar__section--align-start {
-      background-image: linear-gradient(60deg, $mdc-theme-primary-dark, $mdc-theme-primary-dark 220px, $mdc-theme-primary 221px, $mdc-theme-primary);
+      background-image: linear-gradient(60deg, #328c19, #328c19 220px, $mdc-theme-primary-light 221px, $mdc-theme-primary);
     }
     .mdc-top-app-bar__lower .mdc-top-app-bar__section--align-end {
       background-color: $mdc-theme-primary;
@@ -336,10 +337,20 @@ footer h3,
 .mdc-card__title,
 .mdc-textfield__label,
 .mdc-typography--title,
+.mdc-typography--headline,
+.mdc-typography--headline1,
+.mdc-typography--headline2,
+.mdc-typography--headline3,
+.mdc-typography--headline4,
+.mdc-typography--headline5,
+.mdc-typography--headline6,
+.mdc-typography--headline7,
+.mdc-typography--headline,
 .supplimentary-list-title {
   font-family: $heading-font-family, $base-font-family, Helvetica, Arial, sans-serif;
   font-weight: $heading-font-weight;
 }
+.mdc-drawer__content-heading,
 .mdc-typography--headline1,
 .mdc-typography--headline2,
 .mdc-typography--headline3,
@@ -348,7 +359,10 @@ footer h3,
 .mdc-typography--headline6,
 .mdc-typography--headline7,
 .mdc-typography--headline {
-  font-weight: $base-font-weight;
+  font-weight: $heading-medium-font-weight;
+  a {
+    font-weight: $heading-medium-font-weight;
+  }
 }
 .mdc-typography--body1 {
   font-size: 1rem;
@@ -988,7 +1002,7 @@ a {
     h4 {
       margin: 0 0 $unit;
       font-size: 1.5rem;
-      font-weight: $heading-light-font-weight;
+      font-weight: $heading-medium-font-weight;
     }
     .key-info-extra {
       padding: $unit;
@@ -1136,6 +1150,7 @@ hr {
 .mdc-drawer__content-heading {
   margin: 0;
   padding: $unit $unit/2;
+  font-weight: $heading-medium-font-weight;
   .mdc-icon-toggle {
     margin-top: -$unit*(3/4);
   }
@@ -1354,26 +1369,6 @@ body {
     padding: 0 $unit/2;
     .mdc-card__info--fund-title {
       margin: $unit/2 0 $unit*(3/4);
-      a .top-job {
-        margin-left: 0;
-        margin-right: .2rem;
-        display: inline-block;
-        padding: .22222222rem $unit/2;
-        font-weight: 700;
-        line-height: 1;
-        text-align: center;
-        white-space: nowrap;
-        vertical-align: baseline;
-        color: $mdc-theme-secondary-dark;
-        background-color: $mdc-theme-secondary !important;
-        border-radius: $unit;
-        position: relative;
-        top: -2px;
-        left: 0;
-        font-size: 1rem;
-        height: $unit*1.5;
-        box-sizing: border-box;
-      }
     }
     .fa-ul {
       li {
@@ -1553,7 +1548,7 @@ body {
     padding-right: 0;
   }
   li.current-page {
-    background-color: $mdc-theme-complimentary;
+    background-color: $mdc-theme-complimentary-dark;
     border-radius: 50%;
   }
   li:hover,
@@ -1728,6 +1723,7 @@ footer,
           font-size: 4.8rem;
           line-height: 4rem;
           letter-spacing: -0.2rem;
+          font-weight: $heading-font-weight;
           .normal {
             letter-spacing: -0.4rem;
             font-weight: $heading-light-font-weight;
@@ -1782,12 +1778,12 @@ footer,
   }
   .gist {
     .mdc-typography--headline {
-      font-weight: $heading-light-font-weight;
+      font-weight: $heading-medium-font-weight;
       font-size: 1.1rem;
       margin: 0;
     }
     .mdc-card__subtitle {
-      font-weight: $heading-light-font-weight;
+      font-weight: $heading-medium-font-weight;
       margin: $unit/2 0;
       color: $mdc-theme-secondary-dark;
     }
