--- a/assets/css/fundingscotland-styles.scss
+++ b/assets/css/fundingscotland-styles.scss
@@ -1,6 +1,6 @@
-$mdc-theme-primary: #198678;
-$mdc-theme-primary-light: #6CC439;
-$mdc-theme-primary-dark: #2F5348;
+$mdc-theme-primary: #00796A;
+$mdc-theme-primary-light: #198678;
+$mdc-theme-primary-dark: #00796A;
 
 $mdc-theme-complimentary: #ecf2e9;
 $mdc-theme-complimentary-light: #c6dabf;
@@ -144,7 +144,7 @@ header {
       height: $header-lower-height;
     }
     .mdc-top-app-bar__lower .mdc-top-app-bar__section--align-start {
-      background-image: linear-gradient(60deg, #328c19, #328c19 220px, $mdc-theme-primary-light 221px, $mdc-theme-primary);
+      background-image: linear-gradient(60deg, #328c19, #328c19 220px, #6CC439 221px, $mdc-theme-primary);
     }
     .mdc-top-app-bar__lower .mdc-top-app-bar__section--align-end {
       background-color: $mdc-theme-primary;
@@ -1638,7 +1638,7 @@ footer,
       min-height: 23vh;
       .search-form {
         position: relative;
-        background-color: rgba(255, 255, 255, 0.6);
+        background-color: rgba(255, 255, 255, 0.75);
         width: 100%;
         padding: 0 $unit $unit/2;
         box-sizing: border-box;
