--- a/assets/css/fundingscotland-styles.scss
+++ b/assets/css/fundingscotland-styles.scss
@@ -2,8 +2,8 @@ $mdc-theme-primary: #00796A;
 $mdc-theme-primary-light: #198678;
 $mdc-theme-primary-dark: #00796A;
 
-$mdc-theme-complimentary: #ecf2e9;
-$mdc-theme-complimentary-light: #c6dabf;
+$mdc-theme-complimentary: #c6dabf;
+$mdc-theme-complimentary-light: #ecf2e9;
 $mdc-theme-complimentary-dark: #d9e6d4;
 
 $mdc-theme-secondary: #E0E0E0; // Gray 300
@@ -774,7 +774,7 @@ a {
   }
   .mdc-card__actions {
     border-radius: 0 0 2px 2px;
-    background-color: $mdc-theme-complimentary;
+    background-color: $mdc-theme-complimentary-light;
     min-height: auto;
     a {
       color: $mdc-theme-primary-dark;
@@ -849,7 +849,7 @@ a {
     display: none;
   }
   .mdc-card__actions {
-    background-color: $mdc-theme-complimentary;
+    background-color: $mdc-theme-complimentary-light;
     .mdc-card__action {
       color: $mdc-theme-primary-dark;
     }
@@ -859,7 +859,7 @@ a {
 .fundingscotland-fund.mdc-card.mini,
 .fundingscotland-fund.mdc-card.gist,
 .fundingscotland-fund.mdc-card.search-result {
-  border-top: $unit/3 solid $mdc-theme-complimentary;
+  border-top: $unit/3 solid $mdc-theme-complimentary-light;
   .mdc-card__info--vacancy-row {
     padding-top: $unit/4;
     padding-bottom: 0;
@@ -973,7 +973,7 @@ a {
   }
   #fund-tab-bar {
     width: 100%;
-    background-color: $mdc-theme-complimentary;
+    background-color: $mdc-theme-complimentary-light;
     display: flex;
     border-radius: 2px 2px 0 0;
     .mdc-tab {
@@ -1014,7 +1014,7 @@ a {
         vertical-align: top;
         font-weight: 600;
         color: $mdc-theme-secondary-dark;
-        background-color: $mdc-theme-complimentary;
+        background-color: $mdc-theme-complimentary-light;
       }
       .mdc-chip:hover {
         text-decoration: none;
