--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -2,8 +2,8 @@ $mdc-theme-primary: #42842A;
 $mdc-theme-primary-light: #679c54;
 $mdc-theme-primary-dark: #346921;
 
-$mdc-theme-complimentary: #ecf2e9;
-$mdc-theme-complimentary-light: #c6dabf;
+$mdc-theme-complimentary: #c6dabf;
+$mdc-theme-complimentary-light: #ecf2e9;
 $mdc-theme-complimentary-dark: #d9e6d4;
 
 $mdc-theme-secondary: #E0E0E0; // Gray 300
@@ -978,7 +978,7 @@ a {
   }
   .mdc-card__actions {
     border-radius: 0 0 2px 2px;
-    background-color: $mdc-theme-complimentary;
+    background-color: $mdc-theme-complimentary-light;
     min-height: auto;
     a {
       color: $mdc-theme-primary-dark;
@@ -1053,7 +1053,7 @@ a {
     display: none;
   }
   .mdc-card__actions {
-    background-color: $mdc-theme-complimentary;
+    background-color: $mdc-theme-complimentary-light;
     .mdc-card__action {
       color: $mdc-theme-primary-dark;
     }
@@ -1063,7 +1063,7 @@ a {
 .goodmoves-vacancy.mdc-card.mini,
 .goodmoves-vacancy.mdc-card.gist,
 .goodmoves-vacancy.mdc-card.search-result {
-  border-top: $unit/3 solid $mdc-theme-complimentary;
+  border-top: $unit/3 solid $mdc-theme-complimentary-light;
   .mdc-card__info--vacancy-row {
     padding-top: $unit/4;
     padding-bottom: 0;
@@ -1306,7 +1306,7 @@ a {
         vertical-align: top;
         font-weight: 600;
         color: $mdc-theme-secondary-dark;
-        background-color: $mdc-theme-complimentary;
+        background-color: $mdc-theme-complimentary-light;
       }
       .mdc-chip:hover {
         text-decoration: none;
@@ -2177,7 +2177,7 @@ footer,
 }
 .home-browse {
   background-color: $mdc-theme-complimentary-light;
-  background-image: url("data:image/svg+xml,%3Csvg width='30' height='30' viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M15 0C6.716 0 0 6.716 0 15c8.284 0 15-6.716 15-15zM0 15c0 8.284 6.716 15 15 15 0-8.284-6.716-15-15-15zm30 0c0-8.284-6.716-15-15-15 0 8.284 6.716 15 15 15zm0 0c0 8.284-6.716 15-15 15 0-8.284 6.716-15 15-15z' fill='%23d9e6d4' fill-opacity='0.1' fill-rule='evenodd'/%3E%3C/svg%3E");
+  // background-image: url("data:image/svg+xml,%3Csvg width='30' height='30' viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M15 0C6.716 0 0 6.716 0 15c8.284 0 15-6.716 15-15zM0 15c0 8.284 6.716 15 15 15 0-8.284-6.716-15-15-15zm30 0c0-8.284-6.716-15-15-15 0 8.284 6.716 15 15 15zm0 0c0 8.284-6.716 15-15 15 0-8.284 6.716-15 15-15z' fill='%23d9e6d4' fill-opacity='0.1' fill-rule='evenodd'/%3E%3C/svg%3E");
   border-bottom: $unit/5 solid $mdc-theme-primary-light;
   .home-jobs {
     background-color: transparent;
