--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -1709,8 +1709,8 @@ body {
     padding: 0;
     overflow: hidden;
     img {
-      max-width: 150px;
-      max-height: 150px;
+      max-width: $unit*8;
+      max-height: $unit*8;
       object-fit: contain;
     }
   }
