--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -3055,11 +3055,11 @@ form.inline-form {
     background: linear-gradient(rgba(236, 242, 233, 0), rgba(236, 242, 233, 1));
   }
 }
-.top-job .search-result-article__notes .faded-overflow {
-  &:before {
-    background: linear-gradient(rgba(198, 218, 191, 0), rgba(198, 218, 191, 1));
-  }
-}
+// .top-job .search-result-article__notes .faded-overflow {
+//   &:before {
+//     background: linear-gradient(rgba(198, 218, 191, 0), rgba(198, 218, 191, 1));
+//   }
+// }
 
 .after-textfield-action {
   float: right;
