--- a/sites/configurations/fundingscotland/templates/funds/search.hbs
+++ b/sites/configurations/fundingscotland/templates/funds/search.hbs
@@ -1,7 +1,9 @@
 {{#if @root.data.auth ~}}
-<div id="detailed-results-container" class="container-content fundingscotland-fund-search">
-  {{> fund_search_results this}}
-</div>
+  <div class="container-fluid">
+    <div id="detailed-results-container" class="container-content fundingscotland-fund-search">
+      {{> fund_search_results this}}
+    </div>
+  </div>
 {{else}}
-{{> account_redirect_home}}
+  {{> account_redirect_home}}
 {{/if ~}}
