--- a/sites/configurations/fundingscotland/layouts/default.hbs
+++ b/sites/configurations/fundingscotland/layouts/default.hbs
@@ -224,22 +224,27 @@ if(location.host.indexOf('.local') > -1){
         </nav>
       </aside>
 
-      <main class="mdc-theme--background mdc-toolbar-fixed-adjust {{#if layoutParts.sidebar}}drawer-container-permanent{{else}}drawer-container-temporary{{/if}}">
-        {{#if layoutParts.sidebar ~}}
-        <aside class="mdc-drawer mdc-drawer--temporary mdc-drawer--occasional mdc-elevation--z3" id="sidebar-temporary" data-mdc-auto-init="MDCTemporaryDrawer">
-          <div class="mdc-drawer__drawer">
-            <div class="mdc-drawer__header hide-lg">
-              <div class="mdc-drawer__header-content mdc-top-app-bar__title">
-                <div class="brand-text">
-                  Funding <span class="scotland">Scotland</span>
-                </div>
-              </div>
-            </div>
-            {{{layoutParts.sidebar}}}
-          </div>
-        </aside>
+      <main class="mdc-theme--background mdc-toolbar-fixed-adjust">
+        {{#if layoutParts.header ~}}
+          {{{layoutParts.header}}}
         {{/if ~}}
-        {{{layoutParts.body}}}
+        <div class="{{#if layoutParts.sidebar}}drawer-container-permanent{{else}}drawer-container-temporary{{/if}}">
+          {{#if layoutParts.sidebar ~}}
+            <aside class="mdc-drawer mdc-drawer--temporary mdc-drawer--occasional mdc-elevation--z3" id="sidebar-temporary" data-mdc-auto-init="MDCTemporaryDrawer">
+              <div class="mdc-drawer__drawer">
+                <div class="mdc-drawer__header hide-lg">
+                  <div class="mdc-drawer__header-content mdc-top-app-bar__title">
+                    <div class="brand-text">
+                      Funding <span class="scotland">Scotland</span>
+                    </div>
+                  </div>
+                </div>
+                {{{layoutParts.sidebar}}}
+              </div>
+            </aside>
+          {{/if ~}}
+          {{{layoutParts.body}}}
+        </div>
       </main>
 
       <footer class="mdc-layout__footer">
