--- a/assets/css/fundingscotland-styles.scss
+++ b/assets/css/fundingscotland-styles.scss
@@ -1311,6 +1311,9 @@ hr {
     position: relative;
   }
 }
+.container-fluid .container-content {
+  width: auto;
+}
 
 /*=====End Maps=====*/
 /*=====Top Bar=====*/
@@ -2182,6 +2185,15 @@ footer.mdc-layout__footer {
       transform: none;
       width: 320px;
       pointer-events: all;
+    }
+  }
+  .fund_browse {
+    .mdc-drawer--occasional,
+    .mdc-drawer--occasional .mdc-drawer__drawer {
+      width: 960px;
+    }
+    .mdc-drawer--temporary .mdc-drawer__drawer {
+      max-width: 960px;
     }
   }
 }
