--- a/sites/configurations/fundingscotland/partials/funder-search-filters.hbs
+++ b/sites/configurations/fundingscotland/partials/funder-search-filters.hbs
@@ -1,6 +1,6 @@
 <div class="mdc-drawer__content">
   <h2 class="mdc-drawer__content-heading hide-sm mdc-drawer--occasional-ie11">Search funders</h2>
-  <form action="/funders" method="GET">
+  <form action="/{{@root.request.params.path}}" method="GET">
     <div class="h-padding">
       <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
         <span class="far fa-search mdc-text-field__icon" tabindex="0" role="button"></span>
