--- a/sites/configurations/fundingscotland/layouts/default.hbs
+++ b/sites/configurations/fundingscotland/layouts/default.hbs
@@ -228,7 +228,7 @@ if(location.host.indexOf('.local') > -1){
         {{#if layoutParts.header ~}}
           {{{layoutParts.header}}}
         {{/if ~}}
-        <div class="{{#if layoutParts.sidebar}}drawer-container-permanent{{else}}drawer-container-temporary{{/if}}">
+        <div class="{{@root.route.name}} {{#if layoutParts.sidebar}}drawer-container-permanent{{else}}drawer-container-temporary{{/if}}">
           {{#if layoutParts.sidebar ~}}
             <aside class="mdc-drawer mdc-drawer--temporary mdc-drawer--occasional mdc-elevation--z3" id="sidebar-temporary" data-mdc-auto-init="MDCTemporaryDrawer">
               <div class="mdc-drawer__drawer">
