--- a/assets/css/fundingscotland-styles.scss
+++ b/assets/css/fundingscotland-styles.scss
@@ -1148,6 +1148,8 @@ hr {
   padding: $unit;
 }
 .mdc-drawer__content-heading {
+  font-size: 1.1rem;
+  display: block;
   margin: 0;
   padding: $unit $unit/2;
   font-weight: $heading-medium-font-weight;
@@ -1157,6 +1159,12 @@ hr {
   .far.pull-right {
     line-height: $unit*1.7;
   }
+}
+a.mdc-drawer__content-heading {
+  color: rgba(0, 0, 0, 0.87);
+}
+a.mdc-drawer__content-heading:hover {
+  text-decoration: none;
 }
 .mdc-drawer__content-heading:focus {
   outline: none;
