--- a/sites/configurations/fundingscotland/partials/fund-browse-filters.hbs
+++ b/sites/configurations/fundingscotland/partials/fund-browse-filters.hbs
@@ -32,22 +32,31 @@
         <div class="mdc-line-ripple"></div>
       </div>
     </div> -->
+    <a href="/search{{@root.request.url.search}}" class="mdc-drawer__content-heading cursor-pointer noselect mdc-drawer--occasional-ie11">
+      Simple filters
+      <span class="mdc-icon-toggle pull-right">
+        <i class="far fa-chevron-left" aria-hidden="true"></i>
+      </span>
+    </a>
 
-    {{#each (split "activities,beneficiaries,geographical_areas_funded,fund_status,charities_only,type_of_cost,type_of_funding" ",")}}
-      <h3 class="mdc-drawer__content-heading cursor-pointer noselect mdc-drawer--occasional-ie11" data-collapse-target="#{{../instance_id}}-{{this}}-collapse" role="button" aria-pressed="false" aria-label="Show {{getProperty @root.context.metaData.termTypeLabels (concat this ".plural")}}" tabindex="0">
-        {{getProperty @root.context.metaData.termTypeLabels (concat this ".plural")}}
-        <span class="mdc-icon-toggle pull-right">
-          <i class="far {{#if (getProperty @root.request.params.query this)}}fa-chevron-up{{else}}fa-chevron-down{{/if}}" aria-hidden="true"></i>
-        </span>
-      </h3>
-      <div class="mdc-drawer--occasional-ie11" id="{{../instance_id}}-{{this}}-collapse"{{#unless (getProperty @root.request.params.query this)}} style="display: none;"{{/unless}}>
-        {{#each (getProperty @root.data.supplimentaryResponses.types.aggregations (concat this "_slugs.buckets")) ~}}
-          {{#if key ~}}
-            {{> term_checkbox slug=key field=../this selected=(getProperty @root.request.params.query ../this) instance_id=../../instance_id value=(lookup (getProperty @root.data.supplimentaryResponses.types.aggregations (concat ../this ".buckets")) @index)}}
-          {{/if ~}}
-        {{/each ~}}
+    <div class="mdc-layout-grid">
+      <div class="mdc-layout-grid__inner">
+        {{#each (split "activities,beneficiaries,geographical_areas_funded,fund_status,charities_only,type_of_cost,type_of_funding" ",")}}
+          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+            <h3 class="mdc-drawer__content-heading noselect mdc-drawer--occasional-ie11">
+              {{getProperty @root.context.metaData.termTypeLabels (concat this ".plural")}}
+            </h3>
+            <div class="mdc-drawer--occasional-ie11">
+              {{#each (getProperty @root.data.supplimentaryResponses.types.aggregations (concat this "_slugs.buckets")) ~}}
+                {{#if key ~}}
+                  {{> term_checkbox slug=key field=../this selected=(getProperty @root.request.params.query ../this) instance_id=../../instance_id value=(lookup (getProperty @root.data.supplimentaryResponses.types.aggregations (concat ../this ".buckets")) @index)}}
+                {{/if ~}}
+              {{/each ~}}
+            </div>
+          </div>
+        {{/each}}
       </div>
-    {{/each}}
+    </div>
 
     <div class="h-margin v-margin mdc-drawer--occasional-ie11">
       <button class="mdc-button mdc-button--raised mdc-button--large mdc-button--fullwidth mdc-ripple-surface mdc-ripple-surface--primary" type="submit" id="{{instance_id}}-search-submit" data-mdc-auto-init="MDCRipple">
