--- a/sites/configurations/fundingscotland/partials/fund-search-filters.hbs
+++ b/sites/configurations/fundingscotland/partials/fund-search-filters.hbs
@@ -32,8 +32,28 @@
         <div class="mdc-line-ripple"></div>
       </div>
     </div> -->
+    <a href="/browse{{@root.request.url.search}}" class="mdc-drawer__content-heading cursor-pointer noselect mdc-drawer--occasional-ie11">
+      Advanced filters
+      <span class="mdc-icon-toggle pull-right">
+        <i class="far fa-chevron-right" aria-hidden="true"></i>
+      </span>
+    </a>
 
-    {{#each (split "fund_status,charities_only,geographical_areas_funded,type_of_cost,type_of_funding" ",")}}
+    {{#each (split "activities,beneficiaries,geographical_areas_funded" ",")}}
+      {{#if (getProperty @root.request.params.query this) ~}}
+        <a href="/browse{{@root.request.url.search}}" class="mdc-drawer__content-heading cursor-pointer noselect mdc-drawer--occasional-ie11">
+          {{getProperty @root.context.metaData.termTypeLabels (concat this ".plural")}}
+          <!-- <span class="mdc-typography--caption">
+            {{length (getKeys (getProperty @root.request.params.query this))}} selected
+          </span> -->
+          <span class="mdc-icon-toggle pull-right">
+            <i class="far fa-chevron-right" aria-hidden="true"></i>
+          </span>
+        </a>
+      {{/if ~}}
+    {{/each ~}}
+
+    {{#each (split "fund_status,charities_only,type_of_cost,type_of_funding" ",")}}
       <h3 class="mdc-drawer__content-heading cursor-pointer noselect mdc-drawer--occasional-ie11" data-collapse-target="#{{../instance_id}}-{{this}}-collapse" role="button" aria-pressed="false" aria-label="Show {{getProperty @root.context.metaData.termTypeLabels (concat this ".plural")}}" tabindex="0">
         {{getProperty @root.context.metaData.termTypeLabels (concat this ".plural")}}
         <span class="mdc-icon-toggle pull-right">
