--- a/assets/css/fundingscotland-styles.scss
+++ b/assets/css/fundingscotland-styles.scss
@@ -1159,6 +1159,9 @@ hr {
   .far.pull-right {
     line-height: $unit*1.7;
   }
+  .mdc-typography--caption {
+    margin-left: $unit;
+  }
 }
 a.mdc-drawer__content-heading {
   color: rgba(0, 0, 0, 0.87);
