FS search interface

--- a/assets/css/fundingscotland-styles.scss
+++ b/assets/css/fundingscotland-styles.scss
@@ -1151,7 +1151,7 @@ hr {
   font-size: 1.1rem;
   display: block;
   margin: 0;
-  padding: $unit $unit/2;
+  padding: $unit 0 $unit $unit/2;
   font-weight: $heading-medium-font-weight;
   .mdc-icon-toggle {
     margin-top: -$unit*(3/4);
