--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -1404,8 +1404,10 @@ hr {
   padding: $unit;
 }
 .mdc-drawer__content-heading {
+  font-size: 1.1rem;
+  display: block;
   margin: 0;
-  padding: $unit $unit/2;
+  padding: $unit 0 $unit $unit/2;
   font-weight: $heading-medium-font-weight;
   .mdc-icon-toggle {
     margin-top: -$unit*(3/4);
@@ -1413,6 +1415,15 @@ hr {
   .far.pull-right {
     line-height: $unit*1.7;
   }
+  .mdc-typography--caption {
+    margin-left: $unit;
+  }
+}
+a.mdc-drawer__content-heading {
+  color: rgba(0, 0, 0, 0.87);
+}
+a.mdc-drawer__content-heading:hover {
+  text-decoration: none;
 }
 .mdc-drawer__content-heading:focus {
   outline: none;
