FS route improvements

--- a/assets/css/fundingscotland-styles.scss
+++ b/assets/css/fundingscotland-styles.scss
@@ -2198,7 +2198,7 @@ footer.mdc-layout__footer {
       pointer-events: all;
     }
   }
-  .fund_browse {
+  .fund_search_advanced {
     .mdc-drawer--occasional,
     .mdc-drawer--occasional .mdc-drawer__drawer {
       width: 960px;
