--- a/sites/configurations/fundingscotland/partials/fund-search-advanced-filters.hbs
+++ b/sites/configurations/fundingscotland/partials/fund-search-advanced-filters.hbs
@@ -21,7 +21,7 @@
 
 <div class="mdc-drawer__content">
   <!-- <h2 class="mdc-drawer__content-heading hide-sm mdc-drawer--occasional-ie11">Search funds</h2> -->
-  <form action="/{{@root.request.params.path}}" method="GET" class="search-form">
+  <form action="/{{@root.request.params.uri.pathname}}" method="GET" class="search-form">
     <!-- <div class="h-padding">
       <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
         <span class="far fa-search mdc-text-field__icon" tabindex="-1"></span>
@@ -58,11 +58,11 @@
       </div>
     </div>
 
-    <div class="h-margin v-margin mdc-drawer--occasional-ie11">
+    <!-- <div class="h-margin v-margin mdc-drawer--occasional-ie11">
       <button class="mdc-button mdc-button--raised mdc-button--large mdc-button--fullwidth mdc-ripple-surface mdc-ripple-surface--primary" type="submit" id="{{instance_id}}-search-submit" data-mdc-auto-init="MDCRipple">
         <span class="far fa-search-plus fa-fw mdc-list-item__graphic" aria-hidden="true"></span>
         Filter
       </button>
-    </div>
+    </div> -->
   </form>
 </div>
