--- a/sites/configurations/fundingscotland/partials/fund-search-filters.hbs
+++ b/sites/configurations/fundingscotland/partials/fund-search-filters.hbs
@@ -21,7 +21,7 @@
 
 <div class="mdc-drawer__content">
   <!-- <h2 class="mdc-drawer__content-heading hide-sm mdc-drawer--occasional-ie11">Search funds</h2> -->
-  <form action="/{{@root.request.params.path}}" method="GET" class="search-form">
+  <form action="/{{@root.request.params.uri.pathname}}" method="GET" class="search-form">
     <!-- <div class="h-padding">
       <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
         <span class="far fa-search mdc-text-field__icon" tabindex="-1"></span>
@@ -32,7 +32,7 @@
         <div class="mdc-line-ripple"></div>
       </div>
     </div> -->
-    <a href="/browse{{@root.request.url.search}}" class="mdc-drawer__content-heading cursor-pointer noselect mdc-drawer--occasional-ie11">
+    <a href="/search/advanced{{@root.request.url.search}}" class="mdc-drawer__content-heading cursor-pointer noselect mdc-drawer--occasional-ie11">
       Advanced filters
       <span class="mdc-icon-toggle pull-right">
         <i class="far fa-chevron-right" aria-hidden="true"></i>
@@ -41,7 +41,7 @@
 
     {{#each (split "activities,beneficiaries,geographical_areas_funded" ",")}}
       {{#if (getProperty @root.request.params.query this) ~}}
-        <a href="/browse{{@root.request.url.search}}" class="mdc-drawer__content-heading cursor-pointer noselect mdc-drawer--occasional-ie11">
+        <a href="/search/advanced{{@root.request.url.search}}" class="mdc-drawer__content-heading cursor-pointer noselect mdc-drawer--occasional-ie11">
           {{getProperty @root.context.metaData.termTypeLabels (concat this ".plural")}}
           <span class="mdc-typography--caption">
             {{length (arrayify (getProperty @root.request.params.query this))}} selected
@@ -50,7 +50,9 @@
             <i class="far fa-chevron-right" aria-hidden="true"></i>
           </span>
         </a>
-        <input type="hidden" name="{{this}}" value="{{getProperty @root.request.params.query this}}" />
+        {{#each (arrayify (getProperty @root.request.params.query this)) ~}}
+          <input type="hidden" name="{{../this}}[]" value="{{this}}" />
+        {{/each ~}}
       {{/if ~}}
     {{/each ~}}
 
@@ -70,11 +72,11 @@
       </div>
     {{/each}}
 
-    <div class="h-margin v-margin mdc-drawer--occasional-ie11">
+    <!-- <div class="h-margin v-margin mdc-drawer--occasional-ie11">
       <button class="mdc-button mdc-button--raised mdc-button--large mdc-button--fullwidth mdc-ripple-surface mdc-ripple-surface--primary" type="submit" id="{{instance_id}}-search-submit" data-mdc-auto-init="MDCRipple">
         <span class="far fa-search-plus fa-fw mdc-list-item__graphic" aria-hidden="true"></span>
         Filter
       </button>
-    </div>
+    </div> -->
   </form>
 </div>
