--- a/sites/configurations/fundingscotland/partials/fund-search-results.hbs
+++ b/sites/configurations/fundingscotland/partials/fund-search-results.hbs
@@ -239,13 +239,14 @@
       {{#compare @root.data.search_data.detailed_results.hits.total ">" 0 ~}}
       <form action="{{{@root.request.url.path}}}" method="GET">
         <input type="hidden" name="keywords" value="{{@root.request.params.query.keywords}}" />
-        <input type="hidden" name="fund_status" value="{{@root.request.params.query.fund_status}}" />
-        <input type="hidden" name="charities_only" value="{{@root.request.params.query.charities_only}}" />
-        <input type="hidden" name="geographical_areas_funded" value="{{@root.request.params.query.geographical_areas_funded}}" />
-        <input type="hidden" name="type_of_cost" value="{{@root.request.params.query.type_of_cost}}" />
-        <input type="hidden" name="type_of_funding" value="{{@root.request.params.query.type_of_funding}}" />
-        <input type="hidden" name="activities" value="{{@root.request.params.query.activities}}" />
-        <input type="hidden" name="beneficiaries" value="{{@root.request.params.query.beneficiaries}}" />
+        {{#each (split "activities,beneficiaries,geographical_areas_funded" ",")}}
+          {{#each (arrayify (getProperty @root.request.params.query this)) ~}}
+            <input type="hidden" name="{{../this}}[]" value="{{this}}" />
+          {{/each ~}}
+        {{/each ~}}
+        {{#each (split "fund_status,charities_only,type_of_cost,type_of_funding" ",")}}
+          <input type="hidden" name="{{this}}" value="{{getProperty @root.request.params.query this}}" />
+        {{/each ~}}
         <div class="mdc-select mdc-select--box pull-right" data-mdc-auto-init="MDCSelect">
           <select class="mdc-select__native-control" id="sort" name="sort" onchange="this.form.submit();">
             <option value="relevance"{{#compare @root.request.params.query.sort "===" "relevance"}} selected{{/compare}}>Relevance</option>
